--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h2>Have a look at my video application</h2>
+                        <h2>Watch my video application</h2>
                         <div class="videoWrapper">
                             <iframe width="853" height="480" src="https://www.youtube.com/embed/gSeF7KUva5Q?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
