changes in the head

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Founders and Coders website</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Founders and Coders application website</title>
         <link rel="stylesheet" type="text/css" href="assets/styles.css">
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     </head>
