changed heart shape

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="container">
                 <div class="row center">
                     <div class="col col-3 ">
-                        <h2>I just <i class="ion-heart"></i> to build stuff!<br/>
+                        <h2>I just <img class="love" src="assets/img/hearts.png"> to build stuff!<br/>
                             Checkout my most recent project <a href="http://brainfriendz.com/" target="_blank" >BrainFriendz.com</a>
                         </h2>
                     </div>
