changed video link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col">
                         <h2>Watch my video application</h2>
                         <div class="videoWrapper">
-                            <iframe width="853" height="480" src="https://www.youtube.com/embed/gSeF7KUva5Q?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="853" height="480" src="https://www.youtube.com/embed/ky7Tp2xPIa8?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
 
                     </div><!-- col -->
