--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-        <section class="blue">
+        <section class="blue video">
             <svg id="clouds" class="cloud-invert" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none" >
                 <path d="M-5 100 Q 0 20 5 100 Z
                          M0 100 Q 5 0 10 100
