--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="col col-2">
                         <h1>
                             Hey, my name is Max ;&#41; <br>
-                            I am a uni studnet, backpacker and aspiring web developer.
+                            I am a uni student, backpacker and aspiring web developer.
                         </h1>
                     </div>
                 </div>
