Project Details Update

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <div class="row">
                     <h2>Here are some of the sites that I've built:</h2>
                     <div class="site-feature-box">
-                        <a href="https://brainfriendz.github.io/" target="_blank">
+                        <a href="https://tearepublic.github.io/" target="_blank">
                             <div class="site-feature" id="first-site">
 
-                                <h3>BrainFriendz</h3>
+                                <h3>Tearepublic</h3>
 
                             </div>
                         </a> 
